# data_sus

./: .dockerignore  .env.setup  .gitignore  Dockerfile  Makefile  README.md  app.py  compose.yaml  main.py  pyproject.toml  srag.db
notebooks/: main.ipynb
ollama/: pull_model.sh
src/agent/tools/: tools.py  tools_helper.py
src/agentic/: agent.py
src/agentic/agent_schema/: main_schema.py
src/agentic/agent_tools/: tools.py  tools_helper.py
src/agentic/agent_tools/tools_utils/: tools_helper.py  tools_schema.py
src/agentic/agent_tools/tools_utils/db/: data_storage.py
src/api/: config.py  fast.py  schemas.py
src/db/: data_storage.py
src/notebooks/: main.ipynb
src/utils/: logger.py
