[project]
name = "indicium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "docling>=2.55.0",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.9",
    "langgraph>=0.6.8",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.7",
    "s3fs>=2025.9.0",
]
