[project]
name = "indicium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "db-sqlite3>=0.0.1",
    "docling>=2.55.0",
    "httpx>=0.28.1",
    "kaleido>=1.1.0",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "langchain-ollama>=0.3.9",
    "langgraph>=0.6.8",
    "matplotlib>=3.10.6",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.7",
    "plotly>=6.3.1",
    "python-dotenv>=1.1.1",
    "s3fs>=2025.9.0",
    "streamlit>=1.50.0",
]
